# eFusion

./: .gitmodules  CMakeLists.txt  README.md  module.json
doc/: ITEMS.md  TOOLS.md
main/: main.cpp
main/src/: module.cpp  module.hpp
main/ui/instances/main_sketch/: main_sketch.cpp  main_sketch.hpp
main/ui/instances/main_sketch/child/my_sketch/: my_sketch.cpp  my_sketch.hpp
main/ui/instances/main_sketch/child/viewport/: viewport.cpp  viewport.hpp
main/ui/instances/text_editor/: text_editor.cpp  text_editor.hpp  text_editor_core.cpp  text_editor_core.hpp
main/ui/main/: ui.cpp  ui.hpp
scripts/: build.bat  build.sh  build_vx.bat  build_vx.sh  test_project.bat  test_project.sh
